fix: Fixed cell content alignment in dictionary-editor phrases table.

--- a/perform/packages/dictionary-editor/AddPhrase.sass
+++ b/perform/packages/dictionary-editor/AddPhrase.sass
@@ -7,10 +7,10 @@
         background-color:   $subtle-gray
         vertical-align:     middle
 
-        input[type='text']
+        .textInput
 
             width:          100%
 
         &.buttonCell
 
-            text-align:     left !important
+            text-align:     left
